deployment/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ndc14-ingress
spec:
  rules:
  - host: yourapp.example.com
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: ndc14-backend-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ndc14-frontend-service
            port:
              number: 80
